--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,8 +2,10 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.text_field :title %><br><br>
+  
+  <%= f.label :artist %>
+  <%= f.number_field :artist_id%>
 
   <%= f.submit %>
 <% end %>
