--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <% flash.each do |name, msg| -%>
       <%= content_tag :div, msg, class: name %>
     <% end -%>
+    <marquee>🔥🔥🔥🔥TRYING MY BEST🔥🔥🔥🔥</marquee>
     <%= yield %>
   </body>
 </html>
